made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- n.a.

The following classes have been removed:
- n.a.

The following classes have been renamed:
- n.a.

The following methods have been added:
- GSkyRegion::overlaps(GSkyRegions&)
- GSkyMap::overlaps(GSkyRegion&)
- GModelTemporalPhaseCurve::normalise()

The following methods have been removed:
- n.a.

The following methods have been renamed:
- n.a.

The arguments for the following methods have been changed:
- n.a.

The return value of the following methods has been changed:
- n.a.


3. Configuration
-----------------
None


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
The GModelTemporalPhaseCurve models are now normalised by default unless a
normalize="0" attribute is explicitly added into the XML file. Thus the spectral
component of a sky model with a GModelTemporalPhaseCurve temporal component now
gives the phase-averaged flux (#2154).


9. Numerics module
------------------
None


10. Observation module
----------------------
None


11. Optimization module
-----------------------
None


12. Sky module
--------------
A GSkyRegions::overlaps(GSkyRegions&) method has been added to check the
overlap of any region in a given container with any region in another
container (#1980).

A GSkyMap::overlaps(GSkyRegions&) method has been added to check the overlap
of a sky region with a sky map (#1980).


13. Support module
------------------
None


14. XML module
--------------
None


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
----------------------
None


20. CTA interface