@@ -73,6 +73,7 @@ public:
     double           phase(void) const;
     double           phase(const GTime& time) const;
     void             phase(const double& phase);
+    double           value(const double& phase) const;
     double           f0(void) const;
     void             f0(const double& f0);
     double           f1(void) const;
